--- a/pom.xml
+++ b/pom.xml
@@ -44,12 +44,11 @@
             <artifactId>JDA</artifactId>
             <version>4.4.1_353</version>
         </dependency>
-        <dependency>
-            <groupId>com.jagrosh</groupId>
-            <artifactId>jda-utilities</artifactId>
-            <version>3.0.5</version>
-            <type>pom</type>
-        </dependency>
+	<dependency>
+		<groupId>com.github.Nagami-Yukki</groupId>
+		<artifactId>JDA-Utilities</artifactId>
+		<version>1.0</version>
+	</dependency>
 
         <!-- Music Dependencies -->
         <dependency>
