--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -53,7 +53,7 @@ status = ONLINE
 // Once enabled, instructions for login will be written to the console and DMs.
 // DO NOT use your main Google account! Use an alternative account.
 
-youtubeoauth2=false
+youtubeoauth2=true
 
 
 // If you set this to true, the bot will list the title of the song it is currently playing in its
